feat(chat): 내가 속한 채팅방 목록 조회 기능 구현